# ChangeLog for sys-block/iscsitarget
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/iscsitarget/ChangeLog,v 1.29 2009/10/18 11:36:47 flameeyes Exp $

*iscsitarget-1.4.18 (18 Oct 2009)

  18 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +iscsitarget-1.4.18.ebuild, +files/iscsitarget-1.4.18+linux-2.6.32.patch:
  Version bump and add patch to build with 2.6.32. Move the ietd binary to
  /usr/libexec since it should never be executed directly.

  15 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -iscsitarget-0.4.16_p162.ebuild:
  Remove old version.

  15 Jul 2009; nixnut <nixnut@gentoo.org> iscsitarget-0.4.17.ebuild:
  ppc stable #273582

  02 Jul 2009; Markus Meier <maekke@gentoo.org> iscsitarget-0.4.17.ebuild:
  amd64 stable, bug #273582

  11 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  iscsitarget-0.4.17.ebuild:
  stable x86, bug 273582

  10 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  iscsitarget-0.4.17.ebuild, +files/iscsitarget-0.4.17+linux-2.6.30.patch:
  Add patch to build with kernel 2.6.30 released today.

  25 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  iscsitarget-0.4.17.ebuild:
  Explicitly set RDEPEND.

  25 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  files/iscsitarget-0.4.17+linux-2.6.28.patch,
  +files/iscsitarget-0.4.17+linux-2.6.29.patch, iscsitarget-0.4.17.ebuild:
  Add one more patch to fix building with kernel 2.6.29, and update the
  2.6.28 patch to stay inline with my local repository.

  15 Jan 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  files/iscsitarget-0.4.17+linux-2.6.28.patch:
  Fix patch to build properly.

  02 Jan 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -files/iscsitarget-0.4.15-build.patch,
  -files/iscsitarget-0.4.15-kmem.patch,
  -files/iscsitarget-0.4.15-scatter.patch,
  -files/iscsitarget-0.4.16+glibc-2.8-lists.patch, -files/ietd-init.d,
  -iscsitarget-0.4.15-r1.ebuild, -iscsitarget-0.4.16.ebuild: