@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX ietd-conf.d 1073 RMD160 ade5301c8e2eb8cbc16dfae4bfa80e22393e2953 SHA1 1bb990e26b847169d4937e5d2fc28a5f86d55003 SHA256 28c4a6ddfe555d9f400513de04e2e44473263c4505434fc6e926d2b2fe89c414
 AUX ietd-init.d-2 2492 RMD160 5ab62e5b1f0edd17bb296d4f61c8c7ff562b3d02 SHA1 d91acd801928673e7d03639f8c9e4bf7008ebe43 SHA256 403884a4a90c475689d0fd6deb3bffa402cf4b7a0b215cc0cad219ebf9c00ee2
 AUX iscsitarget-0.4.15-isns-set-scn-flag.patch 507 RMD160 9a3b091eafb3d213a0c830a691684e0dc1f04b9c SHA1 9d80a8d1b5069e6ec5252ed8b1636023288bada2 SHA256 dc99ad8fa1cc10f6c6af4c99374dd0da14d3a56aebee2c48dd02cd8e156f9996
@@ -8,7 +11,16 @@ AUX iscsitarget-0.4.17-build.patch 580 RMD160 a770b10dfc4f7c16daefa3e5e0827d1a21
 AUX iscsitarget-1.4.18+linux-2.6.32.patch 1342 RMD160 f03339491c509b2c831012d32b2beed8b0c2d593 SHA1 8e25df9b2778f40eca624142df5db4b7d968a90d SHA256 7ad2db023826e4861d644646d855406c0bbffe007b7a81d1f209948d0d58d336
 DIST iscsitarget-0.4.17.tar.gz 107884 RMD160 2f0413d8bb242d09593f07eb35846c0f9dd2934c SHA1 9c287b76a5bc50995d86d351968368302e70b224 SHA256 bc554508174f2657c93ddb0501adad0256d1c6801a3c1ee54ff721bc92ff8778
 DIST iscsitarget-1.4.18.tar.gz 121290 RMD160 e2ccab942c74492e16140ae331f4818089c7f919 SHA1 cc0d53fc13ba1ba276b1a0d735a54c19306770b3 SHA256 00ffc8c9395b36907d5600e2437b48044254f2537f7f39d83279e5eb635883f1
+DIST iscsitarget-1.4.19.tar.gz 124288 RMD160 60189a94a70eb35c3d9bd995a09ffa6983a1a036 SHA1 96af4ad9343960c700dc46f98a3b9ce2ffbe2231 SHA256 a9fc5e43a2806b8aa95513b2af06d97bb9181ef5fedc906d69144d93a86e664a
 EBUILD iscsitarget-0.4.17.ebuild 1947 RMD160 876c1b3f1216e78b9f46390ba9a18310a18a5743 SHA1 fd29c29f8a31ada3b3afcf5093745f3c70ad2d4f SHA256 b71ae15ee537c66b74becab9d81d5693a28a130fcd66df3a3fb306e05625c5d3
 EBUILD iscsitarget-1.4.18.ebuild 1998 RMD160 98bb8f39c22dcea385757d91ed1ce4e5f7b446bf SHA1 9df08b17a513a57bb01e37b653db9aa8c14b6e64 SHA256 e07cdc6066cf6155d683e522f3ae130452bb602e299edb110f4cdf03bbe2dd5c
-MISC ChangeLog 5696 RMD160 69e870d53e3889f0349b9a8b074cceb9fa68d07f SHA1 bd8af89cb6bd301431f46d80685242be0771706b SHA256 d484e71bc8e988f29a50ad1eb19738b8f30e7fa25accead30c8b41dc619594b0
+EBUILD iscsitarget-1.4.19.ebuild 2037 RMD160 2b9667af313b2d6363a1b4ade8e0e2da92f51b8f SHA1 16258c461e5791d8bc7731a6afec7b5031a6199c SHA256 deaeb4e6147412124daa6c2c1c84044f5a6ae10a90817bc3c9c6069ffb584a52
+MISC ChangeLog 5917 RMD160 f3c454905f4e78e9441c00c6e7edfa2e6414868a SHA1 01480e5852c8db1cb59c806071482e5ec28895e6 SHA256 ee1c69ccdc083ac3336d22d1aca64f21369243ec05ccc11dbc7a875da03b9b15
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (GNU/Linux)
+
+iEYEARECAAYFAksD7RYACgkQAiZjviIA2XibFACgyRoNNjbho5vwK3olXaQ6HlWd
+ZvQAnRzBWgeLZrtSrFjJ2PMg/lnHe6dr
+=jbSr
+-----END PGP SIGNATURE-----
